# lib/server/routes/buckets.js
@@ -178,7 +178,7 @@ BucketsRouter.prototype.updateBucketById = function(req, res, next) {
       return next(new errors.NotFoundError('Bucket not found'));
     }
 
-    var allowed = ['storage', 'transfer', 'name', 'pubkeys'];
+    var allowed = ['name', 'pubkeys'];
 
     for (let prop in req.body) {
       if (allowed.indexOf(prop) !== -1) {
