# lib/storage/models/bucket.js
@@ -10,11 +10,11 @@ const SchemaOptions = require('../options');
 var Bucket = new mongoose.Schema({
   storage: {
     type: Number,
-    default: 10
+    default: 0
   },
   transfer: {
     type: Number,
-    default: 30
+    default: 0
   },
   status: {
     type: String,
@@ -59,8 +59,6 @@ Bucket.set('toObject', {
 Bucket.statics.create = function(user, data, callback) {
   let Bucket = this;
   let bucket = new Bucket({
-    storage: data.storage,
-    transfer: data.transfer,
     status: 'Active',
     name: data.name,
     pubkeys: data.pubkeys,
